Reconcile cumulative accepted SA implementation through W3b